--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^7.2|^8.0",
         "slevomat/coding-standard": "^7.0",
-        "symplify/easy-coding-standard": "^9.1",
+        "symplify/easy-coding-standard": "9.3.10",
         "nikic/php-parser": "^4.0",
         "phpstan/phpstan-strict-rules": "^0.12.9",
         "cakedc/cakephp-phpstan": "^1.0"
