--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "role": "Developer"
         },
         {
-            "name": "Daniel Newn",
+            "name": "Daniel Newns",
             "email": "dan@jump24.co.uk",
             "homepage": "https://jump24.co.uk",
             "role": "Lead Developer"
